<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:maxWidth="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:maxLines="3"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_city_comment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_city_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:counterEnabled="true"
        app:counterMaxLength="60">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_city_comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_picture_gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@id/add_picture_camera_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_city_comment"
        android:layout_marginTop="30dp"
        android:text="@string/add_picture_gallery_button"/>

    <Button
        android:id="@+id/add_picture_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_picture_gallery_button"
        app:layout_constraintTop_toBottomOf="@id/input_city_comment"
        android:layout_marginTop="30dp"
        android:text="@string/add_picture_camera_button"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/city_pic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_picture_gallery_button"
        app:layout_constraintBottom_toTopOf="@id/save_city_button"
        android:layout_marginTop="10dp"
        android:maxHeight="100dp"/>

    <Button
        android:id="@+id/save_city_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/save_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>